# Audio-Spectrum-Display-ESP32S3

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  display.c  display.h  gdisplay.c  gsampler.c  gsampler.h  gtypes.c  gtypes.h  hello_world_main.c  idf_component.yml  led_matrix.c  led_matrix.h  main.c  styles.h
main/effects/: data.c  data.h  effects.c  effects.h
main/effects/source/: simulation.c  sources.c  sources.h  sources_types.h
main/effects/types/: fire.c  multicolor.c  raw.c  simple.c
main/hmi/: gdisplay.c  gdisplay.h  gdisplay_api.h  gdisplay_tools.c  gdisplay_tools.h  gfonts.c  gfonts.h  graphics.c  graphics.h  gstyles.h  model.c  model.h  styles.h
main/leds/: ws2812b_grid.c  ws2812b_grid.h
main/rf/: asd_packet.c  rf_recv.c  rf_recv.h  rf_sender.c  rf_sender.h
main/source/: bins_map.c  microphones.c  simulation.c  sources.c  sources.h  sources_types.h  wired.c
tools/: bins_gen.py
